[gd_scene load_steps=9 format=3 uid="uid://du4lsgjdrutwd"]

[ext_resource type="Script" path="res://scripts/apple.gd" id="1_qxl2o"]
[ext_resource type="PackedScene" uid="uid://j7t8tyk2vpr4" path="res://scenes/game/core.tscn" id="2_ikj8r"]
[ext_resource type="PackedScene" uid="uid://drv3rnbki8x5u" path="res://assets/accapple.glb" id="2_wsmf0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_i8rla"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_6mwmj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_53g5r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_n72ke"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7vtn5"]
radius = 3.0

[node name="Apple" type="Node3D"]
script = ExtResource("1_qxl2o")
fire_rate_ms = 5000
projectile_type = ExtResource("2_ikj8r")

[node name="apple" parent="." instance=ExtResource("2_wsmf0")]

[node name="projectile_spawn" type="Node3D" parent="apple"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.731477, 0.44608, 0)

[node name="PatrolZone" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PatrolZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_7vtn5")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_i8rla")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("4_6mwmj")
initial_state = NodePath("PatrollingState")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_53g5r")

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState/PatrollingState"]
script = ExtResource("6_n72ke")
to = NodePath("../../AcquiringState")
event = &"to_acquiring_state"
delay_in_seconds = "0.0"

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_53g5r")

[node name="AttackingState" type="Node" parent="StateChart/CompoundState/AcquiringState"]
script = ExtResource("6_n72ke")
to = NodePath("../../AttackingState")
event = &"to_attacking_state"
delay_in_seconds = "0.0"

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/AcquiringState"]
script = ExtResource("6_n72ke")
to = NodePath("../../PatrollingState")
event = &"to_patrolling_state"
delay_in_seconds = "0.0"

[node name="AttackingState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_53g5r")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/AttackingState"]
script = ExtResource("6_n72ke")
to = NodePath("../../PatrollingState")
event = &"to_patrolling_state"
delay_in_seconds = "0.0"

[node name="ExtraDamageUpgrade" type="Button" parent="."]
offset_left = 1210.0
offset_top = 325.0
offset_right = 1218.0
offset_bottom = 333.0
text = "All apples get
extra damage
cost: 1000"

[node name="ExtraRangeUpgrade" type="Button" parent="."]
offset_left = 1181.0
offset_top = 205.0
offset_right = 1360.0
offset_bottom = 236.0
text = "Extra Range. Cost: 300
"

[node name="ExtraReloadUpgrade" type="Button" parent="."]
offset_left = 1181.0
offset_top = 270.0
offset_right = 1359.0
offset_bottom = 301.0
text = "Faster reload cost:200"

[connection signal="area_entered" from="PatrolZone" to="." method="_on_patrol_zone_area_entered"]
[connection signal="area_exited" from="PatrolZone" to="." method="_on_patrol_zone_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/PatrollingState" to="." method="_on_patrolling_state_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/AcquiringState" to="." method="_on_acquiring_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/AcquiringState" to="." method="_on_acquiring_state_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/AttackingState" to="." method="_on_attacking_state_state_physics_processing"]
[connection signal="pressed" from="ExtraDamageUpgrade" to="." method="_on_extra_damage_upgrade_pressed"]
[connection signal="pressed" from="ExtraRangeUpgrade" to="." method="_on_extra_range_upgrade_pressed"]
[connection signal="pressed" from="ExtraReloadUpgrade" to="." method="_on_extra_reload_upgrade_pressed"]
